--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
+    <link rel="stylesheet" href="./style/modern-normalize.css" />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-   <header class="header">
+    <header class="header">
       <div class="container">
         <div class="header-inner">
           <a class="logo" href="#"><span class="web">Web</span>Studio</a>
@@ -53,85 +50,103 @@
     <main>
       <section class="section">
         <div class="container">
-          <div class="portfolio">
-            <h1 class="hide">Портфолио</h1>
-            <ul class="navigation">
-              <li><button type="button" class="button">Все</button></li>
-              <li><button type="button" class="button">Веб-сайты</button></li>
-              <li><button type="button" class="button">Приложения</button></li>
-              <li><button type="button" class="button">Дизайн</button></li>
-              <li><button type="button" class="button">Маркетинг</button></li>
-            </ul>
-            <ul class="navigation-item">
-              <li class="navigation-item_block">
-                <img width="370" src="./images/img1.jpg" alt="Технокряк" />
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="navigation">
+            <li class="button-item">
+              <button type="button" class="button">Все</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Веб-сайты</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Приложения</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Дизайн</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="navigation-item">
+            <li class="navigation-item_block">
+              <img width="370" src="./images/img1.jpg" alt="Технокряк" />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Технокряк</h2>
                 <p class="navigation_item_group">Веб-сайт</p>
-              </li>
-              <li class="navigation-item_block">
-                <img
-                  width="370"
-                  src="./images/img2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img
+                width="370"
+                src="./images/img2.jpg"
+                alt="Постер New Orlean vs Golden Star"
+              />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">
                   Постер New Orlean vs Golden Star
                 </h2>
                 <p class="navigation_item_group">Дизайн</p>
-              </li>
-              <li class="navigation-item_block">
-                <img
-                  width="370"
-                  src="./images/img3.jpg"
-                  alt="Ресторан Seafood"
-                />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img width="370" src="./images/img3.jpg" alt="Ресторан Seafood" />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Ресторан Seafood</h2>
                 <p class="navigation_item_group">Приложение</p>
-              </li>
-              <li class="navigation-item_block">
-                <img width="370" src="./images/img4.jpg" alt="Проект Prime" />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img width="370" src="./images/img4.jpg" alt="Проект Prime" />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Проект Prime</h2>
                 <p class="navigation_item_group">Маркетинг</p>
-              </li>
-              <li class="navigation-item_block">
-                <img width="370" src="./images/img5.jpg" alt="Маркетинг" />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img width="370" src="./images/img5.jpg" alt="Маркетинг" />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Маркетинг</h2>
                 <p class="navigation_item_group">Приложение</p>
-              </li>
-              <li class="navigation-item_block">
-                <img
-                  width="370"
-                  src="./images/img6.jpg"
-                  alt="Inspiration has no Borders"
-                />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img
+                width="370"
+                src="./images/img6.jpg"
+                alt="Inspiration has no Borders"
+              />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Inspiration has no Borders</h2>
                 <p class="navigation_item_group">Веб-сайт</p>
-              </li>
-              <li class="navigation-item_block">
-                <img
-                  width="370"
-                  src="./images/img7.jpg"
-                  alt="Издание Limited Edition"
-                />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img
+                width="370"
+                src="./images/img7.jpg"
+                alt="Издание Limited Edition"
+              />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Издание Limited Edition</h2>
                 <p class="navigation_item_group">Дизайн</p>
-              </li>
-              <li class="navigation-item_block">
-                <img width="370" src="./images/img8.jpg" alt="Проект LAB" />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img width="370" src="./images/img8.jpg" alt="Проект LAB" />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Проект LAB</h2>
                 <p class="navigation_item_group">Маркетинг</p>
-              </li>
-              <li class="navigation-item_block">
-                <img
-                  width="370"
-                  src="./images/img9.jpg"
-                  alt="Growing Business"
-                />
+              </div>
+            </li>
+            <li class="navigation-item_block">
+              <img width="370" src="./images/img9.jpg" alt="Growing Business" />
+              <div class="navigation-item-description">
                 <h2 class="navigation-item_name">Growing Business</h2>
                 <p class="navigation_item_group">Приложение</p>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
